# flowforge

./: .coveragerc  .dockerignore  .env.example  .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  GEMINI_REVIEW.md  GOVERNANCE.md  LAUNCH_STRATEGY.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TASKS.md  TASKS_ARCHIVE.md  alembic.ini  check_scheduler.py  codecov.yml  docker-compose.oracle.yml  docker-compose.sample-db.yml  docker-compose.yml  flowforge.ps1  flowforge.sh  parse_alerts.py  pyproject.toml  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  server.ps1  server_start.ps1  server_start.sh  server_stop.ps1  server_stop.sh  (+3 more)
.claude/: settings.local.json
.claude/hooks/: check_test_env_hook.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish.yml  release.yml  scorecard.yml  secrets-scan.yml  test.yml
docs/: CODEBASE_REVIEW.md  FAQ.md  GEMINI_REVIEW.md  INDEX.md  RUNBOOK.md  SONAR_ISSUES.md  TASKS.md  TASKS_ARCHIVE.md  USE_CASE.md  cleanup-report.md  code-review.md  connections.md  data-flow.md  deployment.md  email-providers.md  getting-started.md  gmail-oauth2-setup.md  manual-testing-guide.md  microsoft365-oauth2-setup.md  plugins.md  presentation-script.md  running-the-server.md  security.md  step-types.md  testing.md  threat-model.md
examples/: health-monitoring-alerting.yaml  health-monitoring-pipeline.yaml  log-extraction-pipeline.yaml
flowforge/: audit.py  celery_app.py  cli.py  crypto.py  net_guard.py  registry.py  tasks.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
pipelines/: example_pipeline.yaml
scripts/: check_scheduler.py  test_oracle.py
tests/: check_test_env.py  conftest.py  run_tests.ps1  run_tests.sh  test_ai.py  test_ai_analyze.py  test_app_coverage.py  test_audit.py  test_audit_routes.py  test_auth.py  test_auth_coverage.py  test_azure_blob_upload.py  test_bulk_load_configs.py  test_bulk_load_dry_run.py  test_bulk_load_maint01.py  test_bulk_load_preview.py  test_bulk_load_step.py  test_bulk_load_validate_route.py  test_bulk_loads_coverage.py  test_cleanup.py  test_cli_cleanup.py  test_concurrency.py  test_concurrency_failure_injection.py  test_connection_base.py  test_connections.py  test_connections_bigquery.py  test_connections_coverage.py  test_connections_factory.py  test_connections_factory_coverage.py  test_connections_mssql_odbc.py  test_connections_redshift.py  test_connections_snowflake.py  test_context.py  test_cron_endpoint.py  test_crypto.py  test_crypto_file_encryption.py  test_dag_engine.py  test_dag_integration.py  test_data_load_create.py  test_data_load_step.py  (+77 more)
tests_fuzz/: test_fuzz.py
(+304 files in other folders)
