[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowforge"
version = "1.0.0"
description = "Database-driven pipeline orchestrator. Configure everything from the UI — no YAML required."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["pipeline", "orchestration", "automation", "reporting", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # Web framework
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    # Database (FlowForge config store)
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    # Scheduling
    "apscheduler>=3.10",
    # Templating
    "jinja2>=3.1",
    # Reports
    "openpyxl>=3.1",
    # CLI
    "click>=8.1",
    # Encryption
    "cryptography>=42.0",
    # Auth
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    # CORS
    "flask-cors>=4.0",
    # Rate limiting
    "flask-limiter>=3.8",
    # Env
    "python-dotenv>=1.0",
    # YAML export/import
    "pyyaml>=6.0",
    # Database migrations
    "alembic>=1.13",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
]
drive = [
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
]
microsoft365 = [
    "msal>=1.28",
    "requests>=2.31",
]
pdf = [
    "weasyprint>=62.0",
]
oracle = [
    "oracledb>=2.0",
]
mysql = [
    "pymysql>=1.1",
    "cryptography>=42.0",  # already in core, explicit here for PyMySQL's sha2_password auth
]
sftp = [
    "paramiko>=3.0",
]
claude = [
    "anthropic>=0.25",
]
all = [
    "flowforge[gmail]",
    "flowforge[drive]",
    "flowforge[microsoft365]",
    "flowforge[pdf]",
    "flowforge[oracle]",
    "flowforge[mysql]",
    "flowforge[sftp]",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
]

[project.scripts]
flowforge = "flowforge.cli:cli"

[project.urls]
Homepage = "https://github.com/jagdeepvirdi/flowforge"
Documentation = "https://github.com/jagdeepvirdi/flowforge/blob/main/docs/getting-started.md"
"Bug Tracker" = "https://github.com/jagdeepvirdi/flowforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
